[ADD] FrontEND Info Facturas

--- a/FrontEND.html
+++ b/FrontEND.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <title>Empresa</title>
+    <title>Facturas</title>
     <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div class="wrapper" id="wrapperFiltro" >
         <!-- Añadido: Lista desplegable, campo de texto y botón de consulta -->
         <input type="text" id="consultaInput">
-        <button id="consultaButton">Buscar</button>
+        <button id="buscarButton">Buscar</button>
         
         <div class="wrapper" id="dataContainer"> 
             <!-- Tu contenido existente -->
