--- a/FrontEND.html
+++ b/FrontEND.html
@@ -24,6 +24,8 @@
             <!-- Aquí se mostrará la tabla dinámica -->
         </div>
     </div>
+
+    <button class="customButton" id="EstadoCuentaXY">Estado de Cuenta X o Y</button>
     
     
     <script src="Scripts.js"></script>
