[ADD] Tabla Consultar Factura

--- a/FrontEND.html
+++ b/FrontEND.html
@@ -26,8 +26,9 @@
         </div>
     </div>
 
-    <button class="customButton" id="EstadoCuentaXY">Estado de Cuenta X o Y</button>
-    
+    <button class="customButton" id="EstadoCuentaX">Estado de Cuenta X</button>
+    <button class="customButton" id="EstadoCuentaY">Estado de Cuenta Y</button>
+
     
     <script src="Scripts.js"></script>
 </body>
